Trying to install needed dependencies on github to run project to compilation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
           echo " "
           g++ --version
           cmake --version
+          sudo apt-get install libx11-dev libxrandr-dev
 
       - name: Create build environment
         #run: cmake -E make_directory ${{runner.workspace}}/build
