--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
           g++ --version
           cmake --version
           sudo apt-get install libx11-dev libxrandr-dev
+          sudo apt-get install libgl1-mesa-dev
 
       - name: Create build environment
         #run: cmake -E make_directory ${{runner.workspace}}/build
