--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
           cmake --version
           sudo apt-get install libx11-dev libxrandr-dev
           sudo apt-get install libgl1-mesa-dev
+          sudo apt-get install libudev-dev
 
       - name: Create build environment
         #run: cmake -E make_directory ${{runner.workspace}}/build
